# contrastscan

./: .gitignore  .gitleaksignore  CLAUDE.md  README.md  requirements.txt  ruff.toml  run_tests.sh
.github/: FUNDING.yml
.github/workflows/: tests.yml
app/: auth.py  blog_posts.py  config.py  db.py  findings.py  hardening.py  learn_pages.py  main.py  ratelimit.py  recon.py  report.py  scanner.py  validation.py
app/static/: llms.txt
app/static/css/: api.css  base.css  blog.css  bulk.css  content.css  error.css  index.css  learn.css  result.css  stats.css
app/static/js/: nav.js  (+5 more)
app/templates/: api.html  blog.html  blog_index.html  error.html  index.html  learn.html  learn_index.html  pricing.html  privacy.html  result.html  stats.html  terms.html
app/tests/: conftest.py  test_auth.py  test_backend.py  test_bugfix.sh  test_bulk.py  test_domains.sh  test_domains.txt  test_e2e.py  test_fuzz.py  test_hardening.py  test_integration.py  test_load.sh  test_new_features.py  test_race.py  test_recon.py  test_smoke.sh
deploy/fail2ban/: contrastcyber.conf  nginx-exploit.conf
deploy/nginx/: block-exploits.conf  cloudflare-realip.conf  contrastcyber.com  default  security-headers.conf
deploy/systemd/: contrastscan.service
mcp/: README.md  pyproject.toml  server.py
scanner/: LICENSE  Makefile  README.md
scanner/include/: csp_util.h
scanner/src/: contrastscan.c  dns_check.c  headers.c  ssl_check.c
scanner/tests/: test_integration.sh  test_scoring.c
scripts/: deploy.sh  healthcheck.sh  setup.sh  status.sh
wasm/: Makefile  gol.c  gol.h  hashtable.c  test.html
(+2 files in other folders)
