[project]
name = "mcp-contrastcyber"
version = "1.0.0"
description = "MCP server for ContrastCyber security scanner"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-contrastcyber = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
